made cards for rentals and pending reqs

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,7 +9,7 @@
       <h1><%= @book.title %></h1>
       <h3><%= @book.author %></h3>
 
-        <% if @book.user_id == @current_user.id %>
+        <% if @book.user_id == current_user.id %>
           <span class="update-book">
             <%= link_to icon('fa-regular', 'pen-to-square'), edit_book_path%>
           <span><%=link_to icon('fa-regular', 'trash-can'), book_path(@book), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%></span>
@@ -24,6 +24,3 @@
 </div>
 </div>
 <div class="back-link"><%=link_to "Back to all books", books_path%></div>
-
-
-
