--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,12 +1,13 @@
 <h1>All Books <%=link_to icon('fa-solid', 'circle-plus'), new_book_path %> </h1>
-<i class="fa-solid fa-magnifying-glass"></i>
-  <%= form_with url: books_path, method: :get, class: "d-flex" do %>
+<%# <i class="fa-solid fa-magnifying-glass"></i> %>
+  <%= form_with url: books_path, method: :get, class: "d-flex mb-5 mt-5" do %>
     <%= text_field_tag :query,
       params[:query],
-      class: "form-control",
+      class: "form-control ps-4",
       style: "border-radius: 20px; width: 1250px;",
-      placeholder: "search"
+      placeholder: ""
       %>
+        <i class="fa-solid fa-magnifying-glass" style="position: absolute; right: 171px; top: 200px; z-index: 5;"></i>
   <% end %>
 
 <div class="row d-flex justify-content-center">
