--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,6 +12,7 @@
 @import "pages/index";
 @import "pages/login";
 @import "pages/signup";
+// @import "pages/_new";
 @import "components/button";
 @import "components/form";
 @import "components/card";
