--- a/app/views/rentals/edit.html.erb
+++ b/app/views/rentals/edit.html.erb
@@ -5,5 +5,5 @@
 <%= render 'layouts/calendar', book: @book, rental: @rental %>
 
 <button class="btn btn-dark">
-  <%= link_to 'ALL BOOKS', books_path %>
+  <%= link_to 'All Books', books_path %>
 </button>
