--- a/app/views/rentals/index.html.erb
+++ b/app/views/rentals/index.html.erb
@@ -2,6 +2,8 @@
 
 <div class="container">
   <div class="row mt-5">
+
+
     <% @rentals.each do |rental| %>
       <div class="col-4 mb-5">
         <div class="card" style="width: 18rem;">
@@ -11,7 +13,10 @@
             <p class="card-text"><%= rental.book.author %></p>
             <p class="card-text"><%= rental.start_date %></p>
             <p class="card-text"><%= rental.end_date %></p>
-            <a href= <%= edit_book_rental_path(rental.book.id, rental.id) %> class="btn btn-primary">Edit dates</a>
+            <p class="card-text"><%= rental.status %></p>
+            <% if rental.status != 'Pending' %>
+              <a href= <%= edit_book_rental_path(rental.book.id, rental.id) %> class="btn btn-primary">Edit dates</a>
+            <% end %>
           </div>
         </div>
       </div>
