--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -9,13 +9,11 @@
       <h1><%= @book.title %></h1>
       <h3><%= @book.author %></h3>
 
-        <% if @book.user_id === @renter.id %>
+        <% if @book.user_id == @current_user.id %>
           <span class="update-book">
             <%= link_to icon('fa-regular', 'pen-to-square'), edit_book_path %>
           </span>
           <span><%=link_to icon('fa-regular', 'trash-can'), book_path(@book), data: {turbo_method: :delete, turbo_confirm: "Are you sure?"}%></span>
-        <% else %>
-          <% false %>
         <% end %>
 
       <p><%= @book.synopsis %></p>
