--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -4,11 +4,12 @@
     font-family: $bm-font;
     font-weight: regular;
     background-color: #FFBA08;
-    color: black;
-    border-radius: 100px !important;
+    color: black !important;
+    border-radius: 100px;
   // box-shadow: 10%;
   a{
     text-decoration: none;
     color: white;
   }
 }
+
