--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -15,7 +15,11 @@
   </div>
 </div>
 <br>
-<button class="btn btn-light button-bm">
-<i class="fa-solid fa-arrow-left"></i>
-  <%= link_to 'All Books', books_path %>
-</button>
+</div>
+<%# <button class="btn btn-light button-bm">
+<i class="fa-solid fa-arrow-left"></i> %>
+<div class="back-link">
+<%=link_to "Back to all books", books_path%>
+</div>
+  <%# <%= link_to 'All Books', books_path %>
+<%# </button> %>
