--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+   <%= f.input :first_name %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
