--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -34,7 +34,7 @@
                 </div>
                 <div class="rental-info-details">
                   <%= "Rental period:" %>
-                  <%= rental.start_date %> - <%= rental.end_date %>
+                  <%= rental.start_date %> to <%= rental.end_date %>
                 </div>
               </div>
             </div>
@@ -56,7 +56,29 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane fade" id="my-books" role="my-bookspanel" aria-labelledby="my-books-tab" tabindex="0">bbb</div>
+    <div class="tab-pane fade" id="my-books" role="my-bookspanel" aria-labelledby="my-books-tab" tabindex="0">
+      <div class="row d-flex justify-content-center">
+        <% Book.all.each do |book| %>
+          <% if book.user_id == current_user.id %>
+            <div class="col-4 align-items-stretch" >
+              <div class="card" style="width: 24rem; height: 100;">
+                <img src= <%= book.image_url ? book.image_url : "https://i.pinimg.com/originals/8d/13/b1/8d13b15006817344608393deb8b3a9a2.jpg" %> alt="" style="width: 100%" class="card-img-top" >
+                  <div class="card-body" style="overflow:hidden;">
+                    <% if book.title.length > 35 %>
+                      <p class="card-title"><strong> <%= "#{book.title.slice(0,35)}..." %>  </strong></p>
+                    <% else %>
+                      <p class="card-title"><strong> <%= book.title  %>  </strong></p>
+                    <% end %>
+
+                    <p class="card-text"><%= book.author %></p>
+                    <button class="btn btn-light button-bm"><%= link_to "book details", book_path(book) %></button>
+                  </div>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+    </div>
     <div class="tab-pane fade" id="my-rentals-tab-pane" role="tabpanel" aria-labelledby="my-rentals-tab" tabindex="0">ccc</div>
     <div class="tab-pane fade" id="disabled-tab-pane" role="tabpanel" aria-labelledby="disabled-tab" tabindex="0">...</div>
   </div>
