--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -27,3 +27,9 @@ a.nav-link{
   font-size: 16px;
   font-weight: bolder;
 }
+
+@media (min-width: 992px) {
+.navbar-expand-lg .navbar-nav .dropdown-menu {
+    position: absolute;
+    left: -55px;
+}}
