css design still in progress

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,8 @@
 @import "pages/pages_profile";
 @import "pages/books_show";
 @import "components/small_card";
+
+a{
+  text-decoration: none;
+  color: black;
+}
