--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-10 d-flex flex-column booksnew">
       <h2>Update <%= @book.title %></h2>
 
-  <div class="row col-10 justify-content-center">
+  <div class="row col-10 justify-content-center center-form">
     <div>
       <%= simple_form_for @book do |f| %>
         <%= f.input :title %>
