--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -9,7 +9,15 @@
   // box-shadow: 10%;
   a{
     text-decoration: none;
-    color: white;
+    color: black !important;
   }
 }
-
+.book-detail-btn {
+  background-color: #FFBA08;
+  color: black !important;
+  border-radius: 100px;
+  font-family: $bm-font;
+  font-weight: regular;
+  width: 160px;
+  padding: 8px 16px;
+}
