--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,9 @@
 
       <p><%= @book.synopsis %></p>
     <div>
+    <% if @book.user_id != current_user.id %>
       <%= render 'layouts/calendar', book: @book, rental: @rental %>
+    <% end %>
   </div>
 </div>
 </div>
