--- a/app/views/pages/profile.html.erb
+++ b/app/views/pages/profile.html.erb
@@ -10,9 +10,6 @@
     <li class="nav-item" role="presentation">
       <button class="nav-link" id="my-rentals-tab" data-bs-toggle="tab" data-bs-target="#my-rentals" type="button" role="tab" aria-controls="my-rentals-tab-pane" aria-selected="false">My rentals</button>
     </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="disabled-tab" data-bs-toggle="tab" data-bs-target="#disabled-tab-pane" type="button" role="tab" aria-controls="disabled-tab-pane" aria-selected="false" disabled>Disabled</button>
-    </li>
   </ul>
   <div class="tab-content" id="myTabContent">
     <div class="tab-pane fade show active" id="my-requests" role="tabpanel" aria-labelledby="my-requests-tab" tabindex="0">
@@ -59,7 +56,30 @@
         <% end %>
       </div>
     </div>
-    <div class="tab-pane fade" id="my-books" role="my-bookspanel" aria-labelledby="my-books-tab" tabindex="0">bbb</div>
+   <div class="tab-pane fade" id="my-books" role="my-bookspanel" aria-labelledby="my-books-tab" tabindex="0">
+      <div class="container">
+      <div class="row d-flex justify-content-center">
+        <% Book.all.each do |book| %>
+          <% if book.user_id == current_user.id %>
+            <div class="col-4 align-items-stretch" >
+              <div class="card" style="width: 24rem; height: 100;">
+                <img src= <%= book.image_url ? book.image_url : "https://i.pinimg.com/originals/8d/13/b1/8d13b15006817344608393deb8b3a9a2.jpg" %> alt="" style="width: 100%" class="card-img-top" >
+                  <div class="card-body" style="overflow:hidden;">
+                    <% if book.title.length > 35 %>
+                      <p class="card-title"><strong> <%= "#{book.title.slice(0,35)}..." %>  </strong></p>
+                    <% else %>
+                      <p class="card-title"><strong> <%= book.title  %>  </strong></p>
+                    <% end %>
+                    <p class="card-text"><%= book.author %></p>
+                    <button class="btn btn-light button-bm"><%= link_to "book details", book_path(book) %></button>
+                  </div>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      </div>
+      </div>
+    </div>
     <div class="tab-pane fade" id="my-rentals" role="my-rentalspanel" aria-labelledby="my-rentals-tab" tabindex="0">
       <div class="rentals">
         <div class="container" style="width:500px; align-items:center;">
